force-app/package/core/objects/Mapped_sObject_Field__c/Mapped_sObject_Field__c.object-meta.xml
<CustomObject>
    <label>Mapped sObject Field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapped sObject Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>