force-app/package/core/objects/Mapped_sObject_Field__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <defaultValue>&apos;Automatically generated&apos;</defaultValue>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>