force-app/package/core/objects/Mapped_sObject_Field__c/fields/Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fullname__c</fullName>
    <formula>Mapped_sObject__r.Name + &apos;.&apos; + Name</formula>
    <label>Fullname</label>
    <type>Text</type>
</CustomField>