force-app/package/core/objects/Mapped_sObject_Field__c/fields/Is_Reference__c.field-meta.xml
<CustomField>
    <fullName>Is_Reference__c</fullName>
    <formula>ISPICKVAL(Type__c, &apos;REFERENCE&apos;)</formula>
    <label>Is Reference</label>
    <type>Checkbox</type>
</CustomField>