force-app/package/core/objects/Mapped_sObject_Field__c/fields/JSON_Type__c.field-meta.xml
<CustomField>
    <fullName>JSON_Type__c</fullName>
    <defaultValue>&apos;String&apos;</defaultValue>
    <label>JSON Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>Array</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>REFERENCE</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>