force-app/package/core/objects/Mapped_sObject_Field__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>The maximum length that the field can hold</description>
    <inlineHelpText>The maximum length that the field can hold</inlineHelpText>
    <label>Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>