force-app/package/core/objects/Mapped_sObject_Field__c/fields/Mapped_sObject__c.field-meta.xml
<CustomField>
    <fullName>Mapped_sObject__c</fullName>
    <label>Mapped sObject</label>
    <referenceTo>Mapped_sObject__c</referenceTo>
    <relationshipLabel>Mapped Fields</relationshipLabel>
    <relationshipName>Mapped_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>