force-app/package/core/objects/Mapped_sObject_Field__c/fields/Purpose_Description__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Description__c</fullName>
    <label>Purpose Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>