force-app/package/core/objects/Mapped_sObject_Field__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TIME</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>ADDRESS</fullName>
            </value>
            <value>
                <fullName>LOCATION</fullName>
            </value>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>DOUBLE</fullName>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
            </value>
            <value>
                <fullName>PERCENT</fullName>
            </value>
            <value>
                <fullName>MULTIPICKLIST</fullName>
            </value>
            <value>
                <fullName>ANYTYPE</fullName>
            </value>
            <value>
                <fullName>BASE64</fullName>
            </value>
            <value>
                <fullName>COMBOBOX</fullName>
            </value>
            <value>
                <fullName>COMPLEXVALUE</fullName>
            </value>
            <value>
                <fullName>DATACATEGORYGROUPREFERENCE</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>ENCRYPTEDSTRING</fullName>
            </value>
            <value>
                <fullName>FLOATARRAY</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
            <value>
                <fullName>LONG</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
            <value>
                <fullName>REFERENCE</fullName>
            </value>
            <value>
                <fullName>SOBJECT</fullName>
            </value>
            <value>
                <fullName>STRING</fullName>
            </value>
            <value>
                <fullName>TEXTAREA</fullName>
            </value>
            <value>
                <fullName>TEXTARRAY</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>